# lambda-engine

./: .gitignore  .gitpod.yml  CMakeLists.txt  COPYING  CREDITS  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.txt  lambda-engine.sln
.github/workflows/: ubuntu.yml
docs/: CONTRIBUTING.md  CONTRIBUTING.txt  CodingStyle  CodingStyle.md  MAINTAINER-GUIDE
docs/contributing/: 1. Getting Started.rst  2. Reading Documentation.rst  3. Making Changes.rst  4. Submitting Patches.rst  EmailClients.rst  index  index.rst
engine/: .editorconfig  engine.vcxproj  engine.vcxproj.filters  main.cpp
engine/graphics/: Window.cpp  Window.h
engine/input/: InputHandler.h
public/mathlib/: Vector.h  idVec2.cpp  idVec2.h  idVec3.cpp  idVec3.h  idVec4.cpp  idVec4.h  vec2.cpp
